@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>ow2-asm</artifactId>
-			<version>6.2</version>
+			<version>9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
@@ -89,61 +89,11 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>jdk16</id>
-			<activation>
-				<jdk>[1.6,1.8)</jdk>
-			</activation>
-
-			<dependencies>
-				<dependency>
-					<groupId>org.simpleflatmapper</groupId>
-					<artifactId>ow2-asm</artifactId>
-					<version>5.2.1</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>replacer</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		
-		<profile>
-			<id>jdk18</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-
-			<dependencies>
-				<dependency>
-					<groupId>org.jooq</groupId>
-					<artifactId>jool</artifactId>
-					<version>0.9.12</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.boundary</groupId>
-					<artifactId>fasttuple-core</artifactId>
-					<version>0.1</version>
-					<optional>true</optional>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
 
 		<profile>
 			<id>jdk19</id>
 			<activation>
-				<jdk>[9,12]</jdk>
+				<jdk>[9,21]</jdk>
 			</activation>
 			<dependencies>
 				<dependency>
@@ -168,7 +118,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-modules org.simpleflatmapper.ow2asm</argLine>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
